[workspace]
resolver = "3"
members = ["crates/*", "heph"]

[workspace.package]
edition = "2024"
version = "0.1.0-alpha"
authors = ["Pyrrha Wills <pyrrhawills@gmail.com>"]
description = "A mod loader for Decima engine games."
documentation = "https://cauldron.tallneck.app"

[workspace.dependencies]
cauldron = { path = "crates/cauldron" }
cauldron_config = { path = "crates/cauldron_config" }
cauldron_game_detection = { path = "crates/cauldron_game_detection" }
cauldron_metadata = { path = "crates/cauldron_metadata" }
libdecima_core = { path = "crates/libdecima_core" }

anyhow = "1.0.98"
bitflags = "2.9.1"
libc = "1.0.0-alpha.1"
log = "0.4.27"
once_cell = "1.21.3"
parking_lot = "0.12.4"
retour = "0.4.0-alpha.3"
semver = "1.0.26"
serde = "1.0.219"
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = "1.46.1"
tracing = "0.1.41"
windows = "0.61.3"
windows-sys = "0.60.2"
