[workspace]
resolver = "3"
members = ["crates/*", "heph"]

[workspace.package]
edition = "2024"
version = "0.1.0-alpha"
authors = ["Pyrrha Wills <pyrrhawills@gmail.com>"]
description = "A mod loader for Decima engine games."
documentation = "https://cauldron.tallneck.app"

[workspace.dependencies]
cauldron = { path = "crates/cauldron" }
cauldron_config = { path = "crates/cauldron_config" }
cauldron_game_detection = { path = "crates/cauldron_game_detection" }
cauldron_metadata = { path = "crates/cauldron_metadata" }
libdecima_core = { path = "crates/libdecima_core" }
libdecima_rtti = { path = "crates/libdecima_rtti" }

anyhow = "1.0.100"
bitflags = "2.9.4"
libc = "0.2.177"
log = "0.4.28"
once_cell = "1.21.3"
retour = "0.4.0-alpha.4"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
windows = "0.62.2"
windows-sys = "0.61.2"
