[package]
name = "heph"
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true
documentation.workspace = true

[dependencies]
log.workspace = true
dotenvy = "0.15.7"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
open = "5.3.3"
cauldron_game_detection.workspace = true
colored = "3.1.1"
