[package]
name = "cauldron_config"
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
documented = "0.9.2"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
toml_edit = { version = "0.23.7", features = ["serde"] }
