[package]
name = "cauldron_metadata"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
semver.workspace = true
thiserror.workspace = true
toml = "0.9.9"
