[package]
name = "libdecima"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true


[dependencies]

[features]
default = []

hfw = []  # Horizon: Forbidden West
hzd = []  # Horizon: Zero Dawn
hzdr = [] # Horizon: Zero Dawn Remastered
