[package]
name = "pulse"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cauldron.workspace = true
libdecima.workspace = true
log.workspace = true
once_cell.workspace = true
retour = { workspace = true, features = ["static-detour"] }
