[package]
name = "pulse"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
cauldron.workspace = true
libdecima_core.workspace = true
log.workspace = true
once_cell.workspace = true
retour = { workspace = true, features = ["static-detour"] }
