[package]
name = "winhttp"
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cauldron_config.workspace = true
libc.workspace = true
once_cell.workspace = true
paste = "1.0.15"
windows-sys = { workspace = true, features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Networking_WinHttp",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices"
]}
